--- a/css/style.css
+++ b/css/style.css
@@ -306,14 +306,15 @@ h1 span{
 .menu-content ul{
 
   width:600px;
-  left:50%;
-  float:right;
-  text-align:right;
+  /* left:50%; */
   list-style:none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .menu-content li{
-   display:inline-block;
+   /* display:inline-block; */
    position:relative;
 }
 
